css/styles.css
/* Overall Body */
body {
    /* All text needs the roboto font */
    font-family: roboto;

    /* Border/Margin/Padding */
    margin: 0px;
}

#homeButton{
  display: none; 
  position: fixed; 
  bottom: 33%; 
  right: 10px; 
  z-index: 99;
  border: none; 
  outline: none;
  background-color: #1f2937;
  color: white; 
  cursor: pointer; 
  padding: 10px; 
  border-radius: 50%; 
  font-size: 18px;

  height:75px;
  width:75px;
}

#homeButton:hover{
  background-color: rgb(39, 169, 209); 
}
/* Header styles */
.header {
    /* Visual */
    background-color: #1F2937;

    /* Flex container properties */
    display: flex;
    flex:1;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;


}

.header_logo{
    /* Text Color */
    font-size: 32px;
    font-weight: bolder;
    color: #F9FAF8;

}

.header_links{
    /* Text Color */
    font-size: 18px;
    color: #E5E7EB;

    display: flex;
    flex:1;
    justify-content: space-evenly;
}

/* Links in the header links div should be all white */
.header_links a:link, .header_links a:visited, .header_links a:active, .header_links a:hover{color: #E5E7EB;}

/* The links themselves should align pic with writing */
.headerLink{
  display:flex;
  align-items: baseline;

  gap: 10px;

  /* Text Color */
  font-size: 32px;
  font-weight: bolder;
  color: #F9FAF8;
  
}

/* Images should all be small, the same size */
.smallImg{
  height: 25px;
  width: 25px;
}

.smallImg:hover{
  background-color: #77a6f1;
}

/* Hero section styles*/
.bio {
    /* Color properties */
    background-color: #1F2937;
    color: white;

    /* Div Size */
    height: 800px;

    /* Flex properties */
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;

    /* Element gap */
}

 .textContainer {
    /* Color properties */
    color: #F9FAF8;

    /* Text properties */
    text-align: center;

    /* Flex Properties */
    display: flex;
    flex-direction: column;
    gap: 10px;
 }

 .textContainer{
  font-size: 18px;
 }

 .biomain {

    /* Text properties */
    font-size: 48px;
    font-weight: bolder;

 }
 
 .biosecond {
    
    /* Text properties */
    font-size: 24px;
    color: #E5E7EB;

    padding-left: 20%;
    padding-right: 20%;


 }

 .picContainer {
    /* Flex properties */
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 0.5;

    /* Coloring */
    /* background-color: #9a9b9e; */
 }
 .picContainer img{
  border-radius: 50%;
  height: 300px;
  width: 300px;
 }

 /* Info section styles */

 .info {
  /* Size properties */
  height:500px;

  /* Flex properties */
  display: flex;
  flex-direction: column;
  justify-content: space-around;
 }

 .infoheader {
    /* Border/margin/padding */
    /* text properties */
    text-align: center;
    font-size: 48px;
    font-weight: bolder;
    color: #1F2937;
    

 }

 .cardstack {
   /* border/margin/padding */
   /* flex attributes */
   display: flex;
   justify-content: space-around;

   /* Card text is bold and nicely visible */
   font-size: 24px;
   font-weight: bold;

 }

 .card {

   /* Flex properties */
   display: flex;
   flex-direction: column;
   height: 300px;
   width: 200px;


 }

 .cardimage {
   /* margin/border/padding */

   border-radius: 12px;

   /* Height/width properties */
   height: 100%;

   /* text properties */
   text-align:center;
   vertical-align: middle;
   line-height: 70%;

   /* Flex properties */
   display: flex;
   justify-content: center;
   align-items: center;
 }

  .cardstack a:hover{
  /* hovering shows outline and slight shading */
    border: 4px solid #77a6f1;
    background-color: #d0fcf8d7;
 }

 /* Card images are sized and centered */
 .cardimage img{
  height: 200px;
  width: 200px;

 }

 .cardtext {
   /* text properties */
   text-align: center;
   font: light italic #1f2937;

 }




 .projects {
   /* Color properties */
   background-color: #E5E7EB;

   /* Flex properties */
   display:flex;
   flex-direction: column;
   gap: 60px;
 }

 .infoheader {
  margin-top: 20px;
 }

.projectEntry {
  margin-left: 20px;
 }

 .darker {
  background-color:#ebebeb;
  margin-left: 0;
  padding-left: 20px;
 }

 .projectHead{
  /* Heading has a strong bold underline */
  border-bottom: 2px solid rgb(71, 69, 69);
  display: flex;
  flex-direction:column;
  gap: 10px;


 }

 /* Title language and link are descending in size */
 .projectTitle{
  /* Titles are large and bold */
  font-size: 36px;
  font-weight: bold;
 }
.projectLanguages{
  font-size: 22px;
  font-style: italic;
}


 .projectDesc{
  list-style-type: circle;
  font-size: 24px;
 }

 .projectDesc li{
  padding-top: 3px;
 }
 /* The footer */

 footer {
    /* Border/Margin/Padding */
    /* flex properties */
    display: flex;
    justify-content: center;
    align-items: center;
    /* Color properties */
    background-color: #1F2937;
    /* Text properties */
    color: #E5E7EB;

 }

